[package]
name = "tracing-distributed"
version = "0.4.0"
authors = [
    "Inanna Malick <inanna@recursion.wtf>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
]
edition = "2018"
description = "Tracing layer for multiprocess telemetry"
repository = "https://github.com/eaze/tracing-honeycomb"
keywords = ["tracing", "instrumentation"]
license = "MIT"
readme = "README.md"

[features]
use_parking_lot = ["parking_lot"]

[dependencies]
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3"
itertools = "0.12.1"
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tracing-attributes = "0.1.27"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tokio = { version = "1.0", features = ["full"] }
tracing-futures = "0.2.5"
